src/test/ui/did_you_mean/issue-37139.nll.stderr
error[E0596]: cannot borrow immutable item `x` as mutable
  --> $DIR/issue-37139.rs:22:18
   |
LL |         TestEnum::Item(ref mut x) => {
   |                        --------- consider changing this to `mut x`
LL |             test(&mut x); //~ ERROR cannot borrow immutable
   |                  ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
